<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.myapplication.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FindCourts"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/LocationImage"
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:contentDescription="@string/lociconimage"
        app:srcCompat="@drawable/locationicom" />

    <Button
        android:id="@+id/newPage"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/buttondesign101"
        android:text="@string/newPageButton"
        android:textStyle="bold" />

    <Button
        android:id="@+id/camera"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/buttondesign101"
        android:text="@string/camera"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backgroundMusic"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/buttondesign101"
        android:text="@string/background_music"
        android:textStyle="bold" />

    <Button
        android:id="@+id/stopMusic"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/buttondesign101"
        android:baselineAligned="false"
        android:text="@string/stop_music"
        android:textStyle="bold" />

    <Button
        android:id="@+id/smsButton"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/buttondesign101"
        android:text="@string/sms"
        android:textStyle="bold" />

    <Button
        android:id="@+id/locationCourt"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/buttondesign101"
        android:text="@string/Location"
        android:textStyle="bold" />

</LinearLayout>